Pre sass migrator

--- a/src/drumee/builtins/window/skin/vars/bigchat.scss
+++ b/src/drumee/builtins/window/skin/vars/bigchat.scss
@@ -1,7 +1,4 @@
-.window-bigchat {
-
-
-
+.window {
   --bigchat-header-bg: #4B5DA8;
   --bigchat-default-background: var(--default-background);
   --bigchat-default-background-hover: var(--default-background-hover);
