--- a/src/drumee/skin/index.scss
+++ b/src/drumee/skin/index.scss
@@ -66,8 +66,11 @@ body {
   left: -7px !important;//-8px !important;
 }
 
+@import "./lib/reset";
+@import "./lib/vendor";
 @import "./lib/typo";
+@import "./lib/input";
 @import "./lib/container";
 @import "./lib/svg.scss";
+@import "./lib/menu";
 @import "./lib/utils";
-@import "./lib/reset";
