--- a/src/drumee/skin/vars/index.scss
+++ b/src/drumee/skin/vars/index.scss
@@ -1,11 +1,11 @@
 // @use './account';
 @use './borders';
 @use './box-shadow';
+// @use './my-widget';
 @use './color';
 @use './default';
 // @use './folder';
 // @use './sharebox';
 // @use './team';
 // @use './website';
-@use './widget';
 @use './z-index';
