Prepare SAS migration

--- a/src/drumee/router/skin/index.scss
+++ b/src/drumee/router/skin/index.scss
@@ -4,7 +4,7 @@
 #   TYPE : Global styles, for the whole platform
 # ==================================================================== */
 
-// @import '../../skin/mixins/drumee.scss';
+@import 'skin/mixins/drumee.scss';
 
 .body.box {
   visibility: visible;
