--- a/src/drumee/skin/mixins/drumee.scss
+++ b/src/drumee/skin/mixins/drumee.scss
@@ -4,9 +4,8 @@
 * ==================================================================== */
 // @import './border.scss';
 @import './box-shadow.scss';
-// // @import './colors/index.scss';
 @import './typo.scss';
-// @import './utils.scss';
+@import './utils.scss';
 @import './vendor.scss';
 // @import './z-index.scss';
 
