--- a/src/drumee/router/butler/skin/index.scss
+++ b/src/drumee/router/butler/skin/index.scss
@@ -3,9 +3,9 @@
 #   FILE : src/drumee/router/skin/cop/main.scss
 #   TYPE : Global styles, for the whole platform
 # ==================================================================== */
-@import '../../../skin/mixins/drumee.scss';
+@use '../../../skin/mixins/drumee.scss';
 
-@import 'goodbye';
+@use 'goodbye';
 
 .router-butler {
   &__ui {
@@ -33,11 +33,11 @@
   }
 
   &__title {
-    @include typo($color: #fa8540, $size: 26px, $line: 33px, $weight: 300);
+    @include drumee.typo($color: #fa8540, $size: 26px, $line: 33px, $weight: 300);
   }
 
   &__label {
-    @include typo($color: var(--default-text-color), $size: 14px, $weight: 300, $line: 36px); // var(--egrey-2f)
+    @include drumee.typo($color: var(--default-text-color), $size: 14px, $weight: 300, $line: 36px); // var(--egrey-2f)
 
     &.ph-reminder {
       display: none;
@@ -48,7 +48,7 @@
       &[data-state="1"] {
         display: block;
         transition: all .5s;
-        @include typo($color: var(--secondary-text-color) , $size: 13px, $weight: 300, $line: 16px); //#4A90E2
+        @include drumee.typo($color: var(--secondary-text-color) , $size: 13px, $weight: 300, $line: 16px); //#4A90E2
         text-align: left;
         margin: 0 auto 0 0;
       }
@@ -57,7 +57,7 @@
 
   &__message {
     bottom: 16px;
-    @include typo($color: var(--default-text-color), $size: 16px, $line: 18px, $weight: 400); //$egrey-78
+    @include drumee.typo($color: var(--default-text-color), $size: 16px, $line: 18px, $weight: 400); //$egrey-78
     text-align: left;
 
     &.subtitle {
@@ -67,7 +67,7 @@
     }
 
     &.error {
-      @include typo($color: var(--default-text-error), $size: 14px, $line: 18px, $weight: 300);
+      @include drumee.typo($color: var(--default-text-error), $size: 14px, $line: 18px, $weight: 300);
     }
   }
 
@@ -142,7 +142,7 @@
     }
 
     &.title {
-      @include typo($color: var(--default-text-error), $size: 20px, $line: 28px, $weight: 300);
+      @include drumee.typo($color: var(--default-text-error), $size: 20px, $line: 28px, $weight: 300);
     }
   }
 
@@ -158,13 +158,13 @@
 
     &.no-go {
       background-color: var(--btn-commit-background);
-      @include typo($color: var(--secondary-text-color), $size: 13px, $line: 16px, $weight: 300); //var(--egrey-78)
+      @include drumee.typo($color: var(--secondary-text-color), $size: 13px, $line: 16px, $weight: 300); //var(--egrey-78)
     }
 
     &.go {
       min-width: 115px;
       background-color: var(--btn-commit-background);
-      @include typo($size: 16px, $line: 35px, $weight: 400, $color: var(--btn-commit-text));
+      @include drumee.typo($size: 16px, $line: 35px, $weight: 400, $color: var(--btn-commit-text));
     }
 
     &.action,
@@ -181,7 +181,7 @@
     }
 
     &.link {
-      @include typo($color: var(--secondary-text-color), $size: 13px, $line: 16px, $weight: 300); //var(--egrey-78)
+      @include drumee.typo($color: var(--secondary-text-color), $size: 13px, $line: 16px, $weight: 300); //var(--egrey-78)
     }
   }
 
@@ -205,7 +205,7 @@
       height: auto;
       min-width: 200px;
       white-space: nowrap;
-      @include typo($color: #ff4578, $size: 12px, $line: 16px, $weight: 300);
+      @include drumee.typo($color: #ff4578, $size: 12px, $line: 16px, $weight: 300);
     }
   }
 }
