--- a/src/drumee/skin/lib/container.scss
+++ b/src/drumee/skin/lib/container.scss
@@ -4,7 +4,7 @@
    #   TYPE : Global styles, for the whole platform
    # ==================================================================== */
 
-
+@use "./typo";
 
 .flow-horizontal,
 .flow-footer,
@@ -137,7 +137,7 @@
   .drumee-tk--empty-content {
     opacity: 0.7;
     text-align: center;
-    @include typo($size: 12px, $line: 1.3, $color: var(--btn-secondary-color));
+    @include typo.typo($size: 12px, $line: 1.3, $color: var(--btn-secondary-color));
   }
 }
 
