--- a/src/drumee/skin/mixins/drumee.scss
+++ b/src/drumee/skin/mixins/drumee.scss
@@ -2,10 +2,8 @@
 *   FILE : 
 *   TYPE : Export bases
 * ==================================================================== */
-// @import './border.scss';
-@import './box-shadow.scss';
-@import './typo.scss';
-@import './utils.scss';
-@import './vendor.scss';
-// @import './z-index.scss';
+@forward './box-shadow.scss';
+@forward './typo.scss';
+@forward './utils.scss';
+@forward './vendor.scss';
 
