--- a/src/drumee/builtins/webrtc/skin/local.scss
+++ b/src/drumee/builtins/webrtc/skin/local.scss
@@ -1,5 +1,5 @@
 &__endpoint-local {
-  background-color:rgba(0,0,0,.33);//#89929E;//$vdo-background-color;
+  background-color:rgba(0,0,0,.33);
   position: absolute;
   //top: 20px;
   bottom: 10px;
@@ -7,8 +7,6 @@
   width: 120px;
   height: 80px;
   border-radius: var(--border-radius);
-  // @include video-border-radius();
-  //border-radius:6px;
   border: 1px white solid;
   z-index: 100;
 }
