--- a/src/drumee/builtins/window/skin/vars/account.scss
+++ b/src/drumee/builtins/window/skin/vars/account.scss
@@ -2,6 +2,11 @@
   --account-hover-color: #879bff;
   --account-bg-grey-color: #DDE2E8;
 
+  --account-color-basic-plan: #007ED9;
+  --account-color-pro-plan: #E96102;
+  --account-color-company-plan: #44A4AC;
+  --account-color-offer-banner: #E5E2E2;
+
   /**background**/
   --account-header-bg: #18A3AC;
   --account-default-background: --default-background;
