--- a/src/drumee/skin/index.scss
+++ b/src/drumee/skin/index.scss
@@ -1,9 +1,5 @@
-
-
-
-@forward "./vars/index";
+@use "./vars/index";
 @use "./lib/reset";
-// @import "./mixins/vendor";
 @use "./lib/input";
 @use "./lib/typo";
 @use "./lib/container";
