--- a/src/drumee/builtins/window/account/subscription/skin/view-subscription.scss
+++ b/src/drumee/builtins/window/account/subscription/skin/view-subscription.scss
@@ -1,138 +1,143 @@
-&-view-subscription {
-  &__main,
-  &__container,
-  &__header {
-    height: 100%;
-    width: 100%;
-  }
+@use "mixins/drumee";
 
-  &__container {
-    align-items: center;
-    padding-top: 30px;
-  }
+.account-subscription {
+  &-view-subscription {
 
-  &__header {
-    align-items: flex-start;
-    justify-content: center;
-    max-height: 60px;
-  }
-
-  &__info-container,
-  &__info-wrapper,
-  &__item-container {
-    align-items: center;
-    height: 100%;
-    justify-content: center;
-    width: 100%;
-  }
-
-  &__info-container {
-    max-height: 300px;
-  }
-
-  &__info-wrapper {
-    background: var(--default-bg-block);
-    border-radius: 6px;
-    max-width: 600px;
-    padding: 15px;
-  }
-
-  &__item-container {
-    width: calc(100% - 150px);
-  }
-
-  &__label-wrapper {
-    justify-content: center;
-    width: 100%;
-  }
-
-  &__item-wrapper {
-    justify-content: flex-start;
-    width: 100%;
-  }
-
-  &__buttons-wrapper {
-    align-items: center;
-    height: 100%;
-    justify-content: flex-end;
-    position: absolute;
-    width: 100%;
-
-    &[data-mode="open"] {
-      display: flex;
+    &__main,
+    &__container,
+    &__header {
+      height: 100%;
+      width: 100%;
     }
 
-    &[data-mode="closed"] {
-      display: none;
+    &__container {
+      align-items: center;
+      padding-top: 30px;
     }
 
-    &[data-wait="yes"] {
-      & .modify-btn {
-        cursor: wait;
-        opacity: 0.4;
+    &__header {
+      align-items: flex-start;
+      justify-content: center;
+      max-height: 60px;
+    }
+
+    &__info-container,
+    &__info-wrapper,
+    &__item-container {
+      align-items: center;
+      height: 100%;
+      justify-content: center;
+      width: 100%;
+    }
+
+    &__info-container {
+      max-height: 300px;
+    }
+
+    &__info-wrapper {
+      background: var(--default-bg-block);
+      border-radius: 6px;
+      max-width: 600px;
+      padding: 15px;
+    }
+
+    &__item-container {
+      width: calc(100% - 150px);
+    }
+
+    &__label-wrapper {
+      justify-content: center;
+      width: 100%;
+    }
+
+    &__item-wrapper {
+      justify-content: flex-start;
+      width: 100%;
+    }
+
+    &__buttons-wrapper {
+      align-items: center;
+      height: 100%;
+      justify-content: flex-end;
+      position: absolute;
+      width: 100%;
+
+      &[data-mode="open"] {
+        display: flex;
+      }
+
+      &[data-mode="closed"] {
+        display: none;
+      }
+
+      &[data-wait="yes"] {
+        & .modify-btn {
+          cursor: wait;
+          opacity: 0.4;
+        }
       }
     }
-  }
 
-  &__button-modify {
-    @include typo($size: 14px, $line: 20px, $weight: 300, $color: var(--default-text-color));
-    align-items: center;
-    border: 1.5px solid var(--secondary-text-color);
-    border-radius: 6px;
-    cursor: pointer;
-    height: 30px;
-    justify-content: center;
-    max-width: 80px;
-    width: 100%;
-    
-    &:hover {
-      border: 2px solid var(--bgless-text-hover);
-    }
-  }
-
-  &__note {
-    &.header {
-      @include typo($size: 22px, $line: 26px, $color: var(--default-text-title));
+    &__button-modify {
+      @include drumee.typo($size: 14px, $line: 20px, $weight: 300, $color: var(--default-text-color));
       align-items: center;
-      justify-content: center;
-    }
-
-    &.return {
-      @include typo($size: 18px, $line: 24px, $color: var(--default-text-title));
-      align-items: center;
+      border: 1.5px solid var(--secondary-text-color);
+      border-radius: 6px;
       cursor: pointer;
       height: 30px;
       justify-content: center;
-      left: 30px;
-      max-width: 100px;
-      position: absolute;
+      max-width: 80px;
       width: 100%;
-    }
-    
-    &.subs-label {
-      @include typo($size: 16px, $line: 20px, $color: $color-pro-plan);
-      justify-content: flex-start;
-      text-align: left;
-      width: calc(100% - 50px);
-    }
 
-    &.item {
-      @include typo($size: 16px, $line: 20px, $color: var(--default-text-color));
-
-      &.subs-type {
-        text-transform: capitalize;
-      }
-
-      &.highlight {
-        @include typo($size: 16px, $line: 20px, $weight: 700, $color: var(--default-text-color));
-        text-transform: capitalize;
+      &:hover {
+        border: 2px solid var(--bgless-text-hover);
       }
     }
 
-    &.text-underline {
-      color: var(--default-text-title);
-      cursor: pointer;
-      text-decoration: underline;
+    &__note {
+      &.header {
+        @include drumee.typo($size: 22px, $line: 26px, $color: var(--default-text-title));
+        align-items: center;
+        justify-content: center;
+      }
+
+      &.return {
+        @include drumee.typo($size: 18px, $line: 24px, $color: var(--default-text-title));
+        align-items: center;
+        cursor: pointer;
+        height: 30px;
+        justify-content: center;
+        left: 30px;
+        max-width: 100px;
+        position: absolute;
+        width: 100%;
+      }
+
+      &.subs-label {
+        @include drumee.typo($size: 16px, $line: 20px, $color: var(--account-color-pro-plan));
+        justify-content: flex-start;
+        text-align: left;
+        width: calc(100% - 50px);
+      }
+
+      &.item {
+        @include drumee.typo($size: 16px, $line: 20px, $color: var(--default-text-color));
+
+        &.subs-type {
+          text-transform: capitalize;
+        }
+
+        &.highlight {
+          @include drumee.typo($size: 16px, $line: 20px, $weight: 700, $color: var(--default-text-color));
+          text-transform: capitalize;
+        }
+      }
+
+      &.text-underline {
+        color: var(--default-text-title);
+        cursor: pointer;
+        text-decoration: underline;
+      }
     }
   }
 }
